--- a/package.json
+++ b/package.json
@@ -17,37 +17,37 @@
     "test:unit:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --no-cache --runInBand"
   },
   "dependencies": {
-    "firebase": "^5.0.4",
-    "vue": "^2.5.16",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
+    "firebase": "^9.6.1",
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.3",
+    "vuex": "^3.6.2",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
-    "@vue/cli": "^3.0.0-rc.3",
-    "@vue/cli-plugin-babel": "^3.0.0-rc.3",
-    "@vue/cli-plugin-eslint": "^3.0.0-rc.3",
-    "@vue/cli-service": "^3.0.0-rc.3",
-    "@vue/eslint-config-standard": "^3.0.0-beta.16",
-    "@vue/server-test-utils": "^1.0.0-beta.25",
-    "@vue/test-utils": "^1.0.0-beta.20",
+    "@vue/cli": "^4.5.15",
+    "@vue/cli-plugin-babel": "^4.5.15",
+    "@vue/cli-plugin-eslint": "^4.5.15",
+    "@vue/cli-service": "^4.5.15",
+    "@vue/eslint-config-standard": "^4.0.0",
+    "@vue/server-test-utils": "^1.3.0",
+    "@vue/test-utils": "^1.3.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.2.0",
-    "chromedriver": "^2.43.0",
-    "cross-env": "^5.2.0",
-    "flush-promises": "^1.0.0",
-    "geckodriver": "^1.12.2",
-    "jest": "^22.4.2",
+    "babel-jest": "^27.4.5",
+    "chromedriver": "^96.0.0",
+    "cross-env": "^7.0.3",
+    "flush-promises": "^1.0.2",
+    "geckodriver": "^3.0.1",
+    "jest": "^27.4.5",
     "lodash.clonedeep": "^4.5.0",
-    "lodash.merge": "^4.6.1",
-    "nightwatch": "^0.9.21",
-    "npm-run-all": "^4.1.3",
-    "selenium-server": "^3.14.0",
-    "supertest": "^3.3.0",
-    "vue-jest": "^2.6.0",
-    "vue-server-renderer": "^2.5.16",
-    "vue-template-compiler": "^2.5.16",
-    "webpack-node-externals": "^1.7.2"
+    "lodash.merge": "^4.6.2",
+    "nightwatch": "^1.7.13",
+    "npm-run-all": "^4.1.5",
+    "selenium-server": "^3.141.59",
+    "supertest": "^6.1.6",
+    "vue-jest": "^3.0.7",
+    "vue-server-renderer": "^2.6.14",
+    "vue-template-compiler": "^2.6.14",
+    "webpack-node-externals": "^3.0.0"
   },
   "eslintConfig": {
     "root": true,
