--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "start": "cross-env NODE_ENV=production node scripts/start",
     "lint": "vue-cli-service lint",
     "test": "npm run lint && npm run test:unit && npm run test:integration && npm run test:e2e",
+    "test:lite": "npm run lint && npm run test:unit && npm run test:integration",
     "test:e2e": "node e2e/runner.js",
     "test:integration": "npm run build && jest --testEnvironment node --forceExit server.spec.js",
     "test:unit": "jest src --no-cache",
     "test:unit:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --no-cache --runInBand"
   },
   "dependencies": {
+    "@firebase/firestore": "^3.4.1",
     "firebase": "^9.6.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
