--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "npm run lint && npm run test:unit && npm run test:integration && npm run test:e2e",
     "test:lite": "npm run lint && npm run test:unit && npm run test:integration",
     "test:e2e": "node e2e/runner.js",
-    "test:integration": "npm run build && jest --testEnvironment node --forceExit server.spec.js",
+    "test:integration": "npm run build && jest --testEnvironment node --forceExit --detectOpenHandles server.spec.js",
     "test:unit": "jest src --no-cache",
     "test:unit:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --no-cache --runInBand"
   },
@@ -39,6 +39,7 @@
     "cross-env": "^7.0.3",
     "flush-promises": "^1.0.2",
     "geckodriver": "^3.0.1",
+    "http-proxy-middleware": "^2.0.1",
     "jest": "^27.4.5",
     "lodash.clonedeep": "^4.5.0",
     "lodash.merge": "^4.6.2",
