--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "private": true,
   "scripts": {
     "serve": "npm run build && npm-run-all start serve:client",
-    "serve:client": "vue-cli-service serve",
     "build": "npm run build:server -- --silent && npm run build:client -- --no-clean --silent",
+    "test:unit": "jest src --no-cache",
+    "test:e2e": "node e2e/runner.js",
+    "lint": "vue-cli-service lint",
+    "lint:fix": "vue-cli-service lint --fix",
     "build:client": "vue-cli-service build",
     "build:server": "cross-env WEBPACK_TARGET=node vue-cli-service build",
+    "serve:client": "vue-cli-service serve",
     "start": "cross-env NODE_ENV=production node scripts/start",
-    "lint": "vue-cli-service lint",
     "test": "npm run lint && npm run test:unit && npm run test:integration && npm run test:e2e",
-    "test:lite": "npm run lint && npm run test:unit && npm run test:integration",
-    "test:e2e": "node e2e/runner.js",
     "test:integration": "npm run build && jest --testEnvironment node --forceExit --detectOpenHandles server.spec.js",
-    "test:unit": "jest src --no-cache",
+    "test:lite": "npm run lint && npm run test:unit && npm run test:integration",
     "test:unit:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --no-cache --runInBand"
   },
   "dependencies": {
@@ -28,15 +29,22 @@
   "devDependencies": {
     "@vue/cli": "^4.5.15",
     "@vue/cli-plugin-babel": "^4.5.15",
-    "@vue/cli-plugin-eslint": "^4.5.15",
+    "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "^4.5.15",
-    "@vue/eslint-config-standard": "^4.0.0",
+    "@vue/eslint-config-standard": "^5.1.2",
     "@vue/server-test-utils": "^1.3.0",
     "@vue/test-utils": "^1.3.0",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^27.4.5",
     "chromedriver": "^96.0.0",
     "cross-env": "^7.0.3",
+    "eslint": "^6.7.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^6.2.2",
     "flush-promises": "^1.0.2",
     "geckodriver": "^3.0.1",
     "http-proxy-middleware": "^2.0.1",
