--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "serve": "npm run build && npm-run-all start serve:client",
     "build": "npm run build:server -- --silent && npm run build:client -- --no-clean --silent",
-    "test:unit": "jest src --no-cache",
+    "test:unit": "vue-cli-service test:unit",
     "test:e2e": "node e2e/runner.js",
     "lint": "vue-cli-service lint",
-    "lint:fix": "vue-cli-service lint --fix",
     "build:client": "vue-cli-service build",
     "build:server": "cross-env WEBPACK_TARGET=node vue-cli-service build",
+    "lint:fix": "vue-cli-service lint --fix",
     "serve:client": "vue-cli-service serve",
     "start": "cross-env NODE_ENV=production node scripts/start",
     "test": "npm run lint && npm run test:unit && npm run test:integration && npm run test:e2e",
@@ -30,6 +30,7 @@
     "@vue/cli": "^4.5.15",
     "@vue/cli-plugin-babel": "^4.5.15",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-unit-jest": "~4.5.0",
     "@vue/cli-service": "^4.5.15",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/server-test-utils": "^1.3.0",
@@ -76,7 +77,18 @@
     },
     "parserOptions": {
       "parser": "babel-eslint"
-    }
+    },
+    "overrides": [
+      {
+        "files": [
+          "**/__tests__/*.{j,t}s?(x)",
+          "**/tests/unit/**/*.spec.{j,t}s?(x)"
+        ],
+        "env": {
+          "jest": true
+        }
+      }
+    ]
   },
   "postcss": {
     "plugins": {
@@ -103,6 +115,7 @@
     ],
     "transformIgnorePatterns": [
       "<rootDir>/node_modules/"
-    ]
+    ],
+    "preset": "@vue/cli-plugin-unit-jest"
   }
 }
